--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,11 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 #---
-# TODO Append connection to DB
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareIt
+spring.datasource.username=root
+spring.datasource.password=root
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
