--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -13,8 +13,8 @@ db.name=shareIt
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.datasource.url=jdbc:postgresql://localhost:5432/${db.name}
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 #---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
