--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,37 @@
 version: '3.8'
 services:
   gateway:
-    build: gateway
-    restart: on-failure
+    build: ./gateway
     image: gateway
-    container_name: shareit-gateway
+    container_name: gateway
     ports:
       - "8080:8080"
     depends_on:
       - server
-      - db
     environment:
       - SHAREIT_SERVER_URL=http://server:9090
 
+  db:
+    image: postgres:15.1-alpine
+    container_name: db
+    ports:
+      - "6541:5432"
+    environment:
+      - POSTGRES_DB=shareit
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+
   server:
-    build: server
-    restart: on-failure
+    build: ./server
     image: server
-    container_name: shareit-server
+    container_name: server
     ports:
       - "9090:9090"
     depends_on:
       - db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-  db:
-    image: postgres:13.7-alpine
-    container_name: shareit-db
-    volumes:
-      - /var/lib/postgresql/data/
-    ports:
-      - "6541:5432"
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - DB_NAME=shareit
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - DB_HOST=db
+      - DB_PORT=5432
